--- a/params.yaml
+++ b/params.yaml
@@ -11,6 +11,8 @@ stat_feat_gen:
     aggs: "['sum']" # "['sum', 'mean', 'max', 'min', 'std']"
     cust_aggs: "[('max_min_d', lambda x: x.max()-x.min())]" # "[('max_min_d', lambda x: x.max()-x.min())] + [(f'q_{l:.1f}', lambda x, l=l: x.quantile(l)) for l in np.arange(0.1, 1,0.5)]"
     feat_fn: data/interim/stat_df.csv
+fights_feat_gen:
+    feat_fn: data/interim/feat_df.csv
 split_data:
     quantile_clip: 0.001 # sum percents from lower and upper clip
 seed: 0
