--- a/dvc.yaml
+++ b/dvc.yaml
@@ -49,11 +49,16 @@ stages:
     - ${split_data.feat_anom_fn}
   feat_longlist_sel:
     cmd: python src/feat_longlist_sel.py
+    params:
+    - feat_longlist_sel.method
+    - feat_longlist_sel.thresh
+    - feat_longlist_sel.topn_feats
     deps:
     - ${split_data.feat_full_fn}
     - src/feat_longlist_sel.py
     outs:
     - ${feat_longlist_sel.feat_long_fn}
+    - ${feat_longlist_sel.sign_feat_long_fn}
   feat_shortlist_sel:
     cmd: python src/feat_shortlist_sel.py
     deps:
