--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+phik==0.12.5
 beautifulsoup4==4.12.2
 click==8.1.3
 dvc==3.41.0
@@ -14,3 +15,4 @@ seaborn==0.12.2
 selenium==4.10.0
 tqdm==4.65.0
 urllib3==2.0.3
+pandarallel==1.6.5
