--- a/params.yaml
+++ b/params.yaml
@@ -19,6 +19,10 @@ split_data:
     train_prop: 0.7
     ohe_fn: data/interim/ohe.pkl
     feat_full_fn: data/interim/feat_full_df.csv
+feat_filter_rules:
+    drop_highpsi_thresh: 0.1 # if 0 not dropping
+    dropped_feat_fn: data/interim/dropped_feat_filter_rules.pkl
+    feat_fn: data/interim/feat_filter_rules.pkl
 feat_longlist_sel:
     method: 'phik' # 'phik'
     thresh: 0.07 # if empty saves
