--- a/params.yaml
+++ b/params.yaml
@@ -10,7 +10,7 @@ filter:
 stat_feat_gen:
     min_fights_num: 3
     rol_window_size: 3
-    aggs: "['sum', 'mean', 'max', 'std']" #"['sum', 'mean', 'max', 'min', 'std']"
+    aggs: "['sum', 'mean', 'std']" #"['sum', 'mean', 'max', 'min', 'std']"
     cust_aggs: "[('max_min_d', lambda x: x.max()-x.min())]" # "[('max_min_d', lambda x: x.max()-x.min())] + [(f'q_{l:.1f}', lambda x, l=l: x.quantile(l)) for l in np.arange(0.1, 1,0.5)]"
     feat_fn: data/interim/stat_df.csv
 fights_feat_gen:
