--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+feature_engine==1.9.3
 phik==0.12.5
 beautifulsoup4==4.12.2
 click==8.1.3
@@ -9,7 +10,7 @@ openpyxl==3.1.2
 pydantic==2.5.3
 requests==2.31.0
 rich==13.4.2
-scikit-learn==1.2.2
+scikit-learn==1.7.2
 scipy==1.11.0
 seaborn==0.12.2
 selenium==4.10.0
